<resources>
    <string name="client_id">761947833844-i8rj85fo6nu5acph1hhfdpuc1qj0fkrd.apps.googleusercontent.com</string>
<!--    <string name="app_name">GestionIncidenciasVecinos</string>-->
    <string name="app_name">Flushcidence</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_inicio_de_sesion">Inicio de sesión</string>
    <string name="login_mas_opciones">Más opciones</string>
    <string name="login_correo">Correo</string>
    <string name="login_introduce_tu_correo">Introduce tu correo</string>
    <string name="login_contrasenia">Contraseña</string>
    <string name="login_introduce_contrasenia">Introduce tu contraseña</string>
    <string name="login_mensaje_de_error">Mensaje de error</string>
    <string name="login_inicia_sesion">Inicia sesión</string>
    <string name="login_texto_registro">¿Aún no tienes una cuenta?\nRegístrate</string>
    <string name="registro_registro">Registro</string>
    <string name="registro_correo">Correo</string>
    <string name="registro_introduce_correo">Introduce tu dirección de correo</string>
    <string name="registro_contrasenia">Contraseña</string>
    <string name="registro_introduce_contrasenia">Introduce una contraseña</string>
    <string name="registro_nombre_apellidos">Nombre y apellidos</string>
    <string name="registro_introduce_nombre_apellidos">Introduce tu nombre y apellidos</string>
    <string name="registro_piso_letra">Piso y letra</string>
    <string name="registro_introduce_piso_letra">Introduce tu piso y letra</string>
    <string name="registro_numero_telefono">Número de teléfono</string>
    <string name="registro_introduce_telefono">Introduce tu nombre teléfono</string>
    <string name="registro_mensaje_de_error">Mensaje de error</string>
    <string name="registro_registrate">Regístrate</string>
    <string name="registro_inicia_sesion">¿Ya tienes una cuenta?\nInicia sesión</string>
    <string name="crear_incidencia_titulo">Crear incidencia</string>
    <string name="crear_incidencia_tv_titulo">Título :</string>
    <string name="crear_incidencia_introduce_titulo">Introduce el título</string>
    <string name="crear_incidencia_descripcion">Descripción :</string>
    <string name="crear_incidencia_introduce_descripcion">Introduce la descripción</string>
    <string name="crear_incidencia_imagen">Imagen :</string>
    <string name="crear_incidencia_crear_incidencia">Crear incidencia</string>
    <string name="detalles_incidencia_boton_cerrar">x</string>
    <string name="detalles_incidencia_titulo">Titulo</string>
    <string name="detalles_incidencia_imagen">Imagen :</string>
    <string name="detalles_incidencia_descripcion">Descripción :</string>
    <string name="detalles_incidencia_estado">Estado :</string>
    <string name="detalles_incidencia_aniadir_comentarios">Añadir comentarios :</string>
    <string name="detalles_incidencia_btn_aniadir_comentarios">+</string>
    <string name="detalles_incidencia_usuario_creador">Usuario creador</string>
    <string name="detalles_incidencia_guardar_cambios">Guardar cambios</string>
    <string name="home_usuarios">Usuarios</string>
    <string name="home_titulo_de_home">Título de home</string>
    <string name="home_no_incidencias">No tienes incidencias registradas\n¡Prueba a crear una!</string>
    <string name="perfil_saludo">¡Hola!</string>
    <string name="perfil_tus_datos">Tus datos :</string>
    <string name="perfil_nombre">Nombre :</string>
    <string name="perfil_introduce_tu_nombre">Introduce tu nombre</string>
    <string name="perfil_apellidos">Apellidos :</string>
    <string name="perfil_introduce_tus_apellidos">Introduce tus apellidos</string>
    <string name="perfil_piso_letra">Piso y letra :</string>
    <string name="perfil_ej_piso_letra">Ej: 3B</string>
    <string name="perfil_telefono">Teléfono :</string>
    <string name="perfil_introduce_telefono">Introduce tu teléfono</string>
    <string name="perfil_tipo_de_cuenta">Tipo de cuenta :</string>
    <string name="perfil_guardar_cambios">Guardar cambios</string>
    <string name="perfil_cerrar_sesion">Cerrar sesión</string>
    <string name="tarjeta_incidencia_titulo_incidencia">Título de la incidencia</string>
    <string name="tarjeta_incidencia_creador_incidencia">Creador de la incidencia</string>
    <string-array name="spinner_items">
        <item>Pendiente</item>
        <item>En proceso</item>
        <item>Resuelta</item>
    </string-array>
</resources>